samples/_failures_safe/1761691168_2f40a0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_68eb75d6.c: In function ‘main’:
./samples/SAFE/__tmp_68eb75d6.c:148:35: error: expected ‘)’ at end of input
  148 |     if (b.rows == b.cols && b.rows
      |        ~                          ^
      |                                   )
./samples/SAFE/__tmp_68eb75d6.c:148:5: error: expected declaration or statement at end of input
  148 |     if (b.rows == b.cols && b.rows
      |     ^~
